[package]
name = "krh_earcut"
version = "0.1.0"
edition = "2021"
description = "A simple earcut polygon triangulation algorithm implementation"
readme = "README.md"
keywords = ["no_std"]
categories = ["algorithms"]
repository = "https://github.com/Koranir/krh_earcut"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["glam/std"]
libm = ["glam/libm"]

[dependencies]
glam = { version = "0.27.0", default-features = false }

[dev-dependencies]
macroquad = "0.4.5"

[[example]]
name = "outline"
